# ES_RAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_chatbot.py
ElasticSearch/: app.py  config.py  document_processor.py  embedding_model.py  pipeline.py  setup.py  utils.py
app/: main.py  ui.py
core/: chains.py  memory.py  models.py  retriever.py
utils/: __init__.py  config.py  logging.py  token_counter.py  tracing.py
